feat!: move readside configuration to yaml file (#92)
refactor: make it backward compatible